updated open-mrs service

--- a/openmrs/Dockerfile
+++ b/openmrs/Dockerfile
@@ -1,6 +1,6 @@
 FROM tomcat:8.0
 LABEL author="mallikarjun"
-ADD openmrs.war /usr/local/tomcat/webapps/openmrs.war
+ADD 2.1.2/openmrs.war /usr/local/tomcat/webapps/openmrs.war
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
 
